--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="crea_tu_cuenta_en_planpal">Crea tu cuenta en PlanPal</string>
     <string name="descripci_n">Escribe sobre ti oh sobre tu empresa \n(Web oficial, información de interes etc…)</string>
     <string name="campo_de_informaci_n_adicional_opcional">Campo de Información Adicional (Opcional).</string>
+    <string name="dia_nn">día nn</string>
 </resources>
