--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="descripci_n">Escribe sobre ti oh sobre tu empresa \n(Web oficial, información de interes etc…)</string>
     <string name="campo_de_informaci_n_adicional_opcional">Campo de Información Adicional (Opcional).</string>
     <string name="dia_nn">día nn</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name_event">Name Event</string>
+    <string name="moth_88_2222_8_88_pm">Moth 88, 2222 - 8:88 PM</string>
+    <string name="estado">Estado</string>
+    <string name="esto_es_un_ejemplo_de_una_descripci_n">Esto es un ejemplo de una descripción...</string>
 </resources>
