--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PlanPalMobile</string>
     <string name="title_calendar">Calendar</string>
-    <string name="title_todoLeft">TodoL</string>
+    <string name="title_todoLeft">Events</string>
     <string name="title_todoRight">Perfil</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
@@ -25,7 +25,16 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_event">Name Event</string>
-    <string name="moth_88_2222_8_88_pm">Moth 88, 2222 - 8:88 PM</string>
+    <string name="moth_88_2222_8_88_pm">Moth 88, 2222 – 8:88 PM</string>
     <string name="estado">Estado</string>
-    <string name="esto_es_un_ejemplo_de_una_descripci_n">Esto es un ejemplo de una descripción...</string>
+    <string name="esto_es_un_ejemplo_de_una_descripci_n">Esto es un ejemplo de una descripción…</string>
+    <string name="perfil">Perfil</string>
+    <string name="foto_de_perfil">Foto de perfil</string>
+    <string name="correo">Correo:</string>
+    <string name="descripcion_perfil">Descripción:</string>
+    <string name="cerrar_sesi_n">Cerrar sesión</string>
+    <string name="error_al_cargar_datos">Error al cargar datos.</string>
+    <string name="usuario_no_autenticado">Usuario no autenticado.</string>
+    <string name="correo_alert">"Correo: "</string>
+    <string name="descripci_n_alert">"Descripción: "</string>
 </resources>
