--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="descripci_n">Escribe sobre ti oh sobre tu empresa \n(Web oficial, información de interes etc…)</string>
     <string name="campo_de_informaci_n_adicional_opcional">Campo de Información Adicional (Opcional).</string>
     <string name="dia_nn">día nn</string>
+    <string name="selected_day_label">día %1$d</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name_event">Name Event</string>
