--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="nueva_cita">Nueva cita</string>
     <string name="_20_03_2025">20/03/2025</string>
     <string name="_15_50">15:50</string>
+    <string name="exampleDate">2025/03/23 at 18:00</string>
+    <string name="todo">TODO</string>
 </resources>
