update: Mejoras visuales en la GUI
- calendario mas pequeño
- separacion de los items en el recyclerview
- bordes redondeados
- centrado de los items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="_15_50">15:50</string>
     <string name="exampleDate">2025/03/23 at 18:00</string>
     <string name="todo">TODO</string>
+    <string name="no_events">no events\n</string>
 </resources>
