Para master Sprint 3 Update dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="aqu_va_una_descripci_n_muy_larga_que_podr_a_ocupar_muchas_l_neas_si_no_se_controla_correctamente_este_texto_debe_poder_expandirse_y_comprimirse">Aquí va una descripción muy larga que podría ocupar muchas líneas si no se controla correctamente. Este texto debe poder expandirse y comprimirse.</string>
     <string name="reservar_una_cita">Reservar una cita</string>
     <string name="eliminar">Eliminar</string>
+    <string name="_12_may_2023_15_30">12 MAY, 2023 15:30</string>
+    <string name="reservado_por_name_user">Reservado por: Name_User</string>
 </resources>
