--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="nombre_de_usuario">Nombre de Usuario</string>
     <string name="correo_usuario_correo_com">Correo: usuario@correo.com</string>
     <string name="descripci_n_informaci_n_adicional_sobre_el_usuario">Descripción: Información adicional sobre el usuario.</string>
+    <string name="introduce_tu_nombre_opcional">Introduce tu nombre (Opcional)</string>
 </resources>
