update: mejora en el control del los horarios con nueva extructura de etiquetas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="introduce_tu_nombre_opcional">Introduce tu nombre (Opcional)</string>
     <string name="c_digo">Código</string>
     <string name="editar">Editar</string>
+    <string name="personal">personal</string>
 </resources>
