--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="c_digo">Código</string>
     <string name="editar">Editar</string>
     <string name="personal">personal</string>
+    <string name="hoy">HOY</string>
 </resources>
