updt: - viewStub para el aviso de no eventos del EventManagerFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,6 @@
     <string name="editar">Editar</string>
     <string name="personal">personal</string>
     <string name="hoy">HOY</string>
+    <string name="t_tulo_del_evento">Título del Evento</string>
+    <string name="ver_detalles">Ver detalles</string>
 </resources>
